# otus-pdp-2024-homework-07

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: base.yml
src/homework_07/: __init__.py  __main__.py
tests/: test_requests.py
