[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = ""
authors = ["Dmitriy Salamatov <sds@scd.pp.ru>"]
readme = "README.md"
packages = [{ include = "homework_07", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
testcontainers = { extras = ["redis"], version = "^4.9.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_column_numbers = true
no_error_summary = true
check_untyped_defs = true